- fixed group administration when more entries in table than visible (INGRID-2308) - small style improvement to make invalid elements (during publication) visible

--- a/ingrid-portal-mdek-application/src/main/webapp/css/main.css
+++ b/ingrid-portal-mdek-application/src/main/webapp/css/main.css
@@ -38,7 +38,7 @@ input, textarea, .dijitInputInner {font: normal 11px/12px Verdana,Helvetica,Aria
 
 
 .hidden { display:none !important; }
-.important { color:#bd0d00 !important; }
+.important { color:#bd0d00 !important; display: block !important; }
 .importantBackground { 
 	/*background-color:#E9AFAF !important;*/	
 	border: solid #D46363 1px !important;
